fix: markdown content's scrollbar

--- a/devui-blue.scss
+++ b/devui-blue.scss
@@ -27,7 +27,6 @@ $devui-border-radius: 2px;
   line-height: 1.75;
   font-weight: 400;
   font-size: 16px;
-  overflow-x: hidden;
   color: $devui-text;
 
   h1,
